--- a/module5-solution/index.html
+++ b/module5-solution/index.html
@@ -54,8 +54,8 @@
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
             </li>
             <li id="phone" class="hidden-xs">
-              <a href="tel:410-602-5008">
-                <span>410-602-5008</span></a><div>* We Deliver</div>
+              <a href="tel:+91 95604 10664">
+                <span>+91 95604 10664</span></a><div>* We Deliver</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -66,7 +66,7 @@
   <div id="call-btn" class="visible-xs">
     <a class="btn" href="tel:+91 95604 10664">
     <span class="glyphicon glyphicon-earphone"></span>
-    410-602-5008
+    +91 95604 10664
     </a>
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
