--- a/module5-solution/index.html
+++ b/module5-solution/index.html
@@ -54,8 +54,8 @@
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Awards</a>
             </li>
             <li id="phone" class="hidden-xs">
-              <a href="tel:+91 95604 10664">
-                <span>+91 95604 10664</span></a><div>* We Deliver</div>
+              <a href="tel:401 5410054100">
+                <span>401 5410054100</span></a><div>* We Deliver</div>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -64,9 +64,9 @@
   </header>
 
   <div id="call-btn" class="visible-xs">
-    <a class="btn" href="tel: 40050041046">
+    <a class="btn" href="tel:401 5410054100">
     <span class="glyphicon glyphicon-earphone"></span>
-    +91 95604 10664
+    401 5410054100
     </a>
   </div>
   <div id="xs-deliver" class="text-center visible-xs">* We Deliver</div>
